Fixed text and image alignment on the About page.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://www.katymutch.com
 Description: Theme for katymutch.com
 Author: Tom Halligan
 Author URI: http://www.tomhalligan.co.uk/
-Version: 1.68
+Version: 1.69
 Tags: custom-menu, featured-images, microformats, sticky-post, threaded-comments
 License: GNU General Public License v2.0 | This theme is completely free and open source to use as you like for both personal and commercial projects without any limitations.
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -538,10 +538,17 @@ Special
 }
 
 /** Page specific **/
-#content.about .entry-content img{
-	margin-right: 10px;
-}
-
 #content.about p{
 	vertical-align: top;	
+}
+
+#content.about .attachment-post-thumbnail{
+	border: solid 1px #999;
+	border-right: solid 1px #ccc;
+	border-top: solid 1px #ccc;
+	padding: 1%;
+	width: 45%;
+	margin-right: 10px;
+	float: left;
+	
 }
